<resources>
    <string name="app_name">亿世宝</string>
    <string name="start">开始体验</string>
    <string name="search_hint">搜索</string>
    <string name="tab_home">首页</string>
    <string name="tab_travel">旅行</string>
    <string name="tab_found">发现</string>
    <string name="tab_shop">商城</string>
    <string name="tab_self">我的</string>
    <string name="recommend">推荐商品</string>
    <string name="found">发现内容</string>
    <string name="free_high">免费高端团游</string>
    <string name="good_self">精品自助团游</string>
    <string name="more">更多</string>
    <string name="city_name">广西</string>
    <string name="snap_up">立即抢购</string>
    <string name="input_invite_code">输入邀请码</string>
    <string name="invite_code">邀请码 :</string>
    <string name="please_input_invite_code">请输入您收到的邀请码</string>
    <string name="next">下一步</string>
    <string name="order_pay">订单支付</string>
    <string name="need_pay">需支付 :</string>
    <string name="remain_integral">剩余积分 :</string>
    <string name="integral">积分</string>
    <string name="go_pay">去付款</string>
    <string name="go_submit">提交</string>
    <string name="go_pay_integral">去充值</string>
    <string name="integral_top_up">积分充值</string>
    <string name="integral_take_out">积分提现</string>
    <string name="integral_remain">积分余额：</string>
    <string name="integral_temp">5800</string>
    <string name="list_temp_integral">5600积分</string>
    <string name="list_temp_cash">5600元</string>
    <string name="list_temp_cash_audit">审核中</string>
    <string name="list_temp_cash_complete">已完成</string>
    <string name="style_shopping">购物</string>
    <string name="style_cash">现金</string>
    <string name="integral_take_out_num">提现数量：</string>
    <string name="zhifubao_accout">支付宝账号：</string>
    <string name="integral_take_out_time">预计体现到账时间1-3个工作日</string>
    <string name="integral_take_out_desc">65%积分返现35%购物返现5%手续费</string>
    <string name="pay_style">支付方式</string>
    <string name="integral_take_out_style">提现方式</string>
    <string name="weixin_icon">微信</string>
    <string name="zhifubao_icon">支付宝</string>
    <string name="content_pay">积分最小为1分，充值需为整数</string>
    <string name="one_integral">1积分抢购</string>
    <string name="ten_integral">10积分抢购</string>
    <string name="team_buy">团购</string>
    <string name="ten_integral_pay">10积分</string>
    <string name="one_integral_pay">1积分</string>
    <string name="user_name">用户名</string>
    <string name="phone_number">手机号</string>
    <string name="cash_integral">现金积分</string>
    <string name="shop_integral">购物积分</string>
    <string name="my_order">我的订单</string>
    <string name="my_team">我的团队</string>
    <string name="recommend_friend">推荐好友</string>
    <string name="address_management">地址管理</string>
    <string name="help_center">帮助中心</string>
    <string name="feedback_online">在线反馈</string>
    <string name="about_us">关于我们</string>
    <string name="modify_password">修改密码</string>
    <string name="integral_shop_list">购物积分列表</string>
    <string name="integral_cash_list">现金积分列表</string>
    <string name="cash_list">提现列表</string>
    <string name="cate_normal">综合</string>
    <string name="cate_sales">销量</string>
    <string name="cate_price">价格</string>
    <string name="goods_detail">商品详情页</string>
    <string name="put_into_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="buy_number">数量</string>
    <string name="buy_change_number">1</string>
    <string name="buy_drop">-</string>
    <string name="buy_plus">+</string>
    <string name="confirm_button">确定</string>
    <string name="cancle_button">取消</string>
    <string name="shopping_cart">购物车</string>
    <string name="cart_all_check">全选</string>
    <string name="cart_no_freight">不含运费</string>
    <string name="cart_total">合计: %1$d积分</string>
    <string name="cart_settlement">结算</string>
    <string name="cart_item_integral">%1$d积分</string>
    <string name="cart_item_number">X%1$d</string>
    <string name="cart_item_finish">完成</string>
    <string name="cart_item_recommend">推荐商品</string>
    <string name="guide_skip">跳过 %1$d</string>
    <string name="remove_goods">删除</string>
    <string name="order_pay_text">注：旅游商品只能通过现金积分支付，实物商品可以通过购物积分和现金积分支付，
        优先扣除购物积分</string>
    <string name="order_submit_title">提交订单</string>
    <string name="order_submit_path">上海市浦东新区金桥镇金海路1000号56栋201</string>
    <string name="order_submit_content">超值组合鲜活炫亮/友链魅族沐浴露洗发水/护发素组合套装</string>
    <string name="submit_settlement">结算金额</string>
    <string name="submit_integral">%1$d积分</string>
    <string name="submit_freight">运费%1$d</string>
    <string name="my_order_all">全部</string>
    <string name="my_order_no_pay">未付款</string>
    <string name="my_order_pay">已付款</string>
    <string name="my_order_complete">已完成</string>
    <string name="my_order_name">订单编号：</string>
    <string name="my_order_temp_num">12345678</string>
    <string name="my_order_time_name">订单时间：</string>
    <string name="my_order_temp_time">2018-01-01</string>
    <string name="my_order_go_pay">去付款</string>
    <string name="setting_exit">退出登录</string>
    <string name="self_setting">设置</string>
    <string name="my_team_name">团队名称</string>
    <string name="my_team_name_list">团队列表</string>
    <string name="my_integral_list">积分列表</string>
    <string name="my_team_people_number">%1$d人</string>
    <string name="my_team_member_list">成员列表</string>
    <string name="my_team_member_name">成员名称</string>
    <string name="my_address">上海市浦东新区金桥镇金海路1000号56栋201</string>
    <string name="default_address">默认地址</string>
    <string name="address_edit">编辑地址</string>
    <string name="address_save">保存</string>
    <string name="address_name">收货人</string>
    <string name="address_phone">联系电话</string>
    <string name="address_local">所在区域</string>
    <string name="address_detail">详细地址</string>
    <string name="address_district">邮编</string>
    <string name="address_delete">删除地址</string>
    <string name="please_input_consignee">请输入收货人姓名</string>
    <string name="please_input_contact">请输入联系电话</string>
    <string name="person_data">个人资料</string>
    <string name="person_head_picture">头像</string>
    <string name="person_name">用户名：</string>
    <string name="person_phone">手机号：</string>
    <string name="please_input_person_name">请输入个人姓名</string>
    <string name="please_input_person_phone">请输入联系电话</string>
    <string name="please_input_old_password">请输入原密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_again">请再输入一次新密码</string>
    <string name="help_person_name">姓名：</string>
    <string name="help_person_phone">电话：</string>
    <string name="help_person_note">备注：</string>
    <string name="please_input_login_phone">请输入手机号</string>
    <string name="please_input_login_password">请输入密码</string>
    <string name="please_input_login_password_again">再次输入密码</string>
    <string name="please_reset_password">请输入新密码</string>
    <string name="please_input_security_code">请输入验证码</string>
    <string name="send_security_code">发送验证码</string>
    <string name="login_button">登录</string>
    <string name="register_button">注册</string>
    <string name="reset_button">重置</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="register_now">立即注册</string>
    <string name="security_agree">登录或注册代表您已同意亿世宝</string>
    <string name="security_person">用户服务协议</string>
    <string name="security_and">和</string>
    <string name="security_privacy">隐私政策</string>
    <string name="please_input_right_phone_num">请输入正确的手机号</string>
    <string name="please_input_what_you_want">请输入想要搜索的内容</string>
    <string name="search_no_result">没有匹配</string>
    <string name="register_failure">注册失败</string>
    <string name="register_successful">注册成功</string>
    <string name="login_successful">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="register_pass_failure">两次密码不一致</string>
    <string name="register_security_failure">验证码或手机号不正确或账号已存在</string>
    <string name="modify_password_text">输入错误，请重新输入</string>
    <string name="modify_old_password">原密码不正确，请重新输入</string>
    <string name="modify_new_password">两次新密码不一致</string>
    <string name="refresh_no_more">没有更多数据</string>
    <string name="refresh_complete">刷新完成</string>
    <string name="found_send">发布</string>
    <string name="found_send_text">请输入发布内容</string>
    <string name="found_upload_content">上传</string>
    <string name="found_uploading">正在上传</string>
    <string name="found_loading">正在加载...</string>
    <string name="found_saving">正在保存</string>
    <string name="found_no_file">文件不存在</string>
    <string name="found_max_upload">最多上传9张图片</string>
    <string name="cart_add_complete">添加成功</string>
    <string name="goods_num_failure">请输入购买数量</string>
    <string name="detail_dialog_integral">%1$d积分</string>
    <string name="detail_dialog_num">库存%1$d件</string>
    <string name="no_login">未登录</string>
    <string name="add_address">添加地址</string>
    <string name="address_consignee">收货人</string>
    <string name="consignee_phone">0000000</string>
    <string name="city_choose">城市选择</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
