<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="15dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_item_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/list_temp_integral"
        android:textSize="18sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/tv_item_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/my_order_temp_time"
        android:layout_toRightOf="@+id/iv_team_head"
        android:layout_centerVertical="true"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_item_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/style_shopping"
        android:textSize="18sp"
        android:gravity="center"/>

</LinearLayout>