<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_submit_settlement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_settlement"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="20dp"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/tv_submit_total_freight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_freight"
        android:layout_alignParentRight="true"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/tv_submit_total_integral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_integral"
        android:textSize="18sp"
        android:textColor="@color/red"
        android:layout_toLeftOf="@+id/tv_submit_total_freight"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"/>


</RelativeLayout>