<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/white"
        >

        <RelativeLayout
            android:id="@+id/rl_modify_back"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <ImageButton
                android:id="@+id/ib_modify_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/back_arrow"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_modify_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/modify_password"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke"/>
    <EditText
        android:id="@+id/et_modify_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/please_input_old_password"
        android:padding="10dp"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke"/>

    <EditText
        android:id="@+id/et_modify_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/please_input_new_password"
        android:padding="10dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/whitesmoke"/>

    <EditText
        android:id="@+id/et_modify_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/please_input_new_password_again"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/bt_pass_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:text="@string/address_save"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>