<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/login_icon"
        android:layout_marginTop="150dp"
        />
    <TextView
        android:id="@+id/tv_login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_login_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:id="@+id/rl_login_phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_login_name"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/iv_login_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_phone_icon"/>
    <EditText
        android:id="@+id/et_login_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:inputType="number"
        android:hint="@string/please_input_login_phone"
        android:layout_toRightOf="@+id/iv_login_phone"
        android:layout_marginLeft="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_login_phone"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_bg"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp">

        <ImageView
            android:id="@+id/iv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_password"/>
        <EditText
            android:id="@+id/et_login_password_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/please_input_login_password"
            android:layout_toRightOf="@+id/iv_login_password"
            android:layout_marginLeft="5dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_login_password"
        android:layout_centerHorizontal="true"
        android:background="@color/red"
        android:layout_marginTop="23dp"
        android:text="@string/login_button"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/register_now"
            android:textColor="@color/red"
            android:textSize="18sp"/>

    </RelativeLayout>

</RelativeLayout>